# example-pkg

./: setup.cfg
