[metadata]
name = s-nicoliendro14
version = 0.0.1
author = Nicolas Liendro
author_email = nicolasliendro0697@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicoLiendro14/example-pkg
project_urls =
    Bug Tracker = https://github.com/NicoLiendro14/example-pkg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src